--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
+
 .App {
   text-align: center;
 }
@@ -35,6 +37,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h2 {
+  color: white;
+  padding: 30px;
+  font-family: 'Dancing Script', cursive;
+
 }
 
 
