--- a/src/forms/form.css
+++ b/src/forms/form.css
@@ -1,100 +1,127 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
-
-.todos {
-    position: absolute;
-    margin-top: -205px;
-    margin-left: 6vw;
-}
-
-.enter {
+.App-clock {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 32px;
     text-align: center;
 }
+
 
 .wide {
+    width: auto;
+    height: auto;
+    min-height: 100%;
+    margin: 0 auto;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    border-bottom-right-radius: 40%;
+    border-bottom-left-radius: 40%;
 }
 
-.enter input {
+.main-container {
+    background-color:blue;
+    width: auto;
+    height:auto;
+    min-height: 100%;
+    margin: 0 auto;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.top {
+    height: 150px;
+    background: linear-gradient(to bottom, rgba(131, 56, 236, 0.8) 0%, rgba(131, 56, 236, 0.6) 100%), url(https://s7.postimg.org/yap5ueygr/back.png);
+    position: relative;
+    border-radius: 0 0 100% 100%;
+    width: 140%;
+    margin-left: -20%;
+    z-index: 2;
+    margin-bottom: 20px;
+}
+
+.title {
+    position: absolute;
+    width: 350px;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+}
+
+.title h1 {
+    font-size: 26px;
     text-align: center;
-    border-radius: 10px;
-    width: 80vw;
+    font-weight: 300;
+    margin-bottom: 10px;
+    font-family: 'Montserrat Alternates', Arial, sans-serif;
+}
+.title h2, .title h2 span{
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: 300;
+    text-transform: none;
+
+}
+
+.add_btn {
+    font-size: 42px;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+    font-family: 'Montserrat Alternates', Arial, sans-serif;
+    line-height: 1.1;
+    margin-left: 10px;
+    background-color: red;
+    border-radius:100%;
+    height: 45px;
+    width: 45px;
+    bottom: -17px;
+    position: absolute;
+    left:0;
+    right:0;
+    margin: 0 auto;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.1);
+    z-index: 2;
+}
+
+.add__description {
+    background-color: #f7f7f7;
+    font-family: inherit;
     font-size: 20px;
+    padding: 20px 15px 12px;
+    transition: border 0.3s;
+    width: 100%;
+    border:none;
+    color: #939CA7;
 }
 
-.enter button {
-    display: inline;
-    box-sizing: border-box;
-    border-radius: 20px;
+.notes {
+    margin-top: 25px;
 }
 
-textarea {
-    font-family: 'Dancing Script', cursive;
-    border-radius: 10px;
-}
-
-input {
-    font-family: 'Dancing Script', cursive;
-}
 .todos textarea {
-    background-color: transparent;
+    opacity: 0.7; /* Полупрозрачный фон */
+    filter: alpha(Opacity=70);
+    border-radius: 10%;
+    background-color: blue;
     border-color:transparent;
     font-family: 'Dancing Script', cursive;
     font-size: 24px;
+    color: white;
 }
 
 .close {
-    color: red;
-}
-
-h2 {
-    text-align: center;
-    font-size: 56px;
+    background-color: red;
+    opacity: 1;
 }
 
 .block{
     position:absolute;
     display:none;
-    margin-left: 175px;
-    margin-top: -215px;
+    margin-left: 200px;
+    margin-top: -50px;
     color: red;
 }
 .notes:hover .block{
     display:block;
 }
-
-.notes img {
-    margin-top: 40px;
-    margin-left: 5vw;
-    object-fit: cover;
-    height:250px;
-}
-
-.btn-grd-primary {
-    background-size: 200% auto;
-    -webkit-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
-    color: #fff;
-    font-family: 'Dancing Script', cursive;
-}
-
-.btn-grd-primary:hover {;
-    background-position: right center;
-}
-
-.btn-grd-primary.hor-grd {
-    background-size: auto 200%;
-}
-
-.btn-grd-primary.hor-grd:hover {
-    background-position: bottom center;
-}
-
-.btn-grd-primary {
-    background-image: -webkit-gradient(linear, left top, right top, from(#77aaff), color-stop(51%, #0764ff), to(#77aaff));
-    background-image: linear-gradient(to right, #77aaff 0%, #0764ff 51%, #77aaff 100%);
-}
-.btn-grd-primary.hor-grd {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(#77aaff), color-stop(51%, #0764ff), to(#77aaff));
-    background-image: linear-gradient(to top, #77aaff 0%, #0764ff 51%, #77aaff 100%);
-}
-
