--- a/src/forms/form.css
+++ b/src/forms/form.css
@@ -1,43 +1,24 @@
 .App-clock {
     font-family: 'Quicksand', sans-serif;
     font-size: 32px;
-    text-align: center;
 }
 
 
 .wide {
+    display: flex;
+    text-align: center;
     overflow: hidden;
     border-bottom-right-radius: 40%;
     border-bottom-left-radius: 40%;
 }
 
 .main-container {
-    width: auto;
+    width: 100%;
     height:auto;
     min-height: 100%;
     margin: 0 auto;
-    overflow: hidden;
     background: linear-gradient(to bottom, rgba(51, 51, 255, 0.1) 0%, rgba(12, 51, 242, 0.9) 5%),
     url(https://s7.postimg.org/yap5ueygr/back.png);
-}
-
-.top {
-
-    opacity: 0.9;
-    height: 150px;
-    position: relative;
-    width: 140%;
-    margin-left: -20%;
-    z-index: 2;
-    margin-bottom: 20px;
-}
-
-.title {
-    position: absolute;
-    width: 350px;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: #fff;
 }
 
@@ -50,32 +31,20 @@
 }
 .title h2, .title h2 span{
     font-size: 18px;
-    text-align: center;
-    margin-bottom: 10px;
     font-weight: 300;
-    text-transform: none;
 
 }
 
 .add_btn {
-    font-size: 42px;
     border: none;
-    color: #ffffff;
-    cursor: pointer;
-    font-family: 'Montserrat Alternates', Arial, sans-serif;
-    line-height: 1.1;
-    margin-left: 10px;
     background-color: red;
     border-radius:100%;
-    height: 45px;
-    width: 45px;
-    bottom: -17px;
-    position: absolute;
-    left:0;
-    right:0;
-    margin: 0 auto;
-    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.1);
-    z-index: 2;
+    height: 42px;
+    width: 42px;
+    color: #ffffff;
+    font-family: 'Montserrat Alternates', Arial, sans-serif;
+    font-size: 32px;
+
 }
 
 .add__description {
@@ -91,7 +60,11 @@
 }
 
 .notes {
+    display: inline-flex;
+    flex-wrap: wrap;
     margin-top: 25px;
+    margin-left: 25px;
+
 }
 
 .todos textarea {
@@ -105,18 +78,18 @@
     color: white;
 }
 
-.close {
-    background-color: red;
-    opacity: 1;
+.block{
+    display: none;
 }
 
-.block{
-    position:absolute;
-    display:none;
-    margin-left: 150px;
-    margin-top: -50px;
-    color: red;
+.block button {
+    border: none;
+    background: white;
+    font: 14px system-ui;
 }
+
 .notes:hover .block{
-    display:block;
+    display:inline-flex;
+    align-items: flex-end;
+    position: relative;
 }
