--- a/src/forms/form.css
+++ b/src/forms/form.css
@@ -52,7 +52,7 @@
     .notes {
         display: inline-flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
 
     }
@@ -81,7 +81,7 @@
     .notes {
         display: inline-flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
 
     }
@@ -110,7 +110,7 @@
     .notes {
         display: inline-flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
 
     }
@@ -139,7 +139,7 @@
     .notes {
         display: inline-flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
 
     }
